loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:12: error: Invalid literal number
for (i<-1to4){
        ^LoopStairs:12: error: illegal start of simple expression
for (i<-1to4){
        ^LoopStairs:16: error: ')' expected but '}' found.
	}
        ^