loopfor.LoopStairs.scala.code
while (!estFaceMur()){
  avance();
}
while(estFaceMur()){
  if (estFaceMur()){
  gauche();
  avance();
  droite();
  avance();
}
}
for (i<-1to4){
  avance()
}